<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ui.AddEmployeeAcitivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/back"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/nhapten"
        android:inputType="text"
        android:paddingLeft="8dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_salary"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/edt_name"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/nhapluong"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/edt_salary"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/nhaptuoi"
        android:paddingLeft="8dp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_age"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:inputType="textCapWords"
            android:text="@string/luu"
            android:textColor="#ffffff"
            android:textSize="18sp"

            tools:ignore="ButtonStyle,TextViewEdits" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:inputType="textCapWords"
            android:text="@string/huy"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:ignore="TextViewEdits" />


    </LinearLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/edt_image_profile"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_below="@id/edt_age"-->
    <!--        android:layout_marginStart="12dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="12dp"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        android:background="@drawable/custom_edittext"-->
    <!--        android:hint="Ảnh"-->
    <!--        android:paddingLeft="8dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:ignore="Autofill" />-->

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#7E57C2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--        <ImageButton-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginStart="18dp"-->
        <!--            android:id="@+id/imb_back_add"-->
        <!--            android:background="@drawable/ic_back"-->
        <!--            android:layout_alignParentLeft="true"-->
        <!--            android:layout_marginLeft="18dp" />-->
    </RelativeLayout>
</RelativeLayout>