<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/content_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="28dp"
            android:layout_weight="60"
            android:text="@string/manhanvien"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_id_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_id"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="28dp"
            android:layout_weight="60"
            android:text="@string/tennhanvien"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_name_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_name"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="28dp"
            android:layout_weight="60"
            android:text="@string/luongnhanvien"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_salary_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_salary"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="28dp"
            android:layout_weight="60"
            android:text="@string/tuoinhanvien"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_age_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/content_age"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:background="#232F34" />

</RelativeLayout>